--- a/build.gradle
+++ b/build.gradle
@@ -42,10 +42,10 @@ dependencies {
   compile 'com.github.tonivade:purefun-free:1.8'
   compile 'com.github.tonivade:purefun-effect:1.8'
   compile 'com.github.tonivade:purefun-instances:1.8'
-  runtime 'com.h2database:h2:1.4.197'
-  testCompile 'com.zaxxer:HikariCP:2.7.8'
-  testCompile 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
-  testCompile 'org.junit.platform:junit-platform-runner:1.5.2'
+  testRuntime 'com.h2database:h2:1.4.200'
+  testCompile 'com.zaxxer:HikariCP:3.4.2'
+  testCompile 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
+  testCompile 'org.junit.platform:junit-platform-runner:1.6.0'
 }
 
 modifyPom {
