--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'java-library'
 apply plugin: 'eclipse'
 apply plugin: 'jacoco'
 apply plugin: 'com.bmuschko.nexus'
@@ -38,14 +39,14 @@ test {
 }
 
 dependencies {
-  annotationProcessor 'com.github.tonivade:purefun-processor:1.8'
-  compile 'com.github.tonivade:purefun-free:1.8'
-  compile 'com.github.tonivade:purefun-effect:1.8'
-  compile 'com.github.tonivade:purefun-instances:1.8'
+  annotationProcessor 'com.github.tonivade:purefun-processor:1.9-SNAPSHOT'
+  api 'com.github.tonivade:purefun-free:1.9-SNAPSHOT'
+  implementation 'com.github.tonivade:purefun-effect:1.9-SNAPSHOT'
+  implementation 'com.github.tonivade:purefun-instances:1.9-SNAPSHOT'
   testRuntime 'com.h2database:h2:1.4.200'
-  testCompile 'com.zaxxer:HikariCP:3.4.2'
-  testCompile 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
-  testCompile 'org.junit.platform:junit-platform-runner:1.6.0'
+  testImplementation 'com.zaxxer:HikariCP:3.4.2'
+  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+  testImplementation 'org.junit.platform:junit-platform-runner:1.6.2'
 }
 
 modifyPom {
