--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ dependencies {
   api 'com.github.tonivade:purefun-free:1.9-SNAPSHOT'
   implementation 'com.github.tonivade:purefun-effect:1.9-SNAPSHOT'
   implementation 'com.github.tonivade:purefun-instances:1.9-SNAPSHOT'
+  implementation 'io.r2dbc:r2dbc-spi:0.8.1.RELEASE'
+  implementation 'io.r2dbc:r2dbc-pool:0.8.1.RELEASE'
   testRuntime 'com.h2database:h2:1.4.200'
   testImplementation 'com.zaxxer:HikariCP:3.4.2'
   testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
