--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
   implementation 'io.r2dbc:r2dbc-spi:0.8.1.RELEASE'
   implementation 'io.r2dbc:r2dbc-pool:0.8.1.RELEASE'
   testRuntime 'com.h2database:h2:1.4.200'
+  testRuntime 'io.r2dbc:r2dbc-h2:0.8.3.RELEASE'
   testImplementation 'com.zaxxer:HikariCP:3.4.2'
   testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
   testImplementation 'org.junit.platform:junit-platform-runner:1.6.2'
