--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'java'
 apply plugin: 'java-library'
-apply plugin: 'eclipse'
 apply plugin: 'jacoco'
 apply plugin: 'com.bmuschko.nexus'
+apply plugin: 'com.diffplug.eclipse.apt'
 
 group = 'com.github.tonivade'
 archivesBaseName = 'puredbc'
@@ -19,6 +19,7 @@ buildscript {
 
   dependencies {
     classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
+    classpath 'com.diffplug.gradle:goomph:3.22.0'
   }
 }
 
