--- a/build.gradle
+++ b/build.gradle
@@ -40,10 +40,10 @@ test {
 }
 
 dependencies {
-  annotationProcessor 'com.github.tonivade:purefun-processor:2.0'
-  api 'com.github.tonivade:purefun-free:2.0'
-  implementation 'com.github.tonivade:purefun-effect:2.0'
-  implementation 'com.github.tonivade:purefun-instances:2.0'
+  annotationProcessor 'com.github.tonivade:purefun-processor:2.1-SNAPSHOT'
+  api 'com.github.tonivade:purefun-free:2.1-SNAPSHOT'
+  implementation 'com.github.tonivade:purefun-effect:2.1-SNAPSHOT'
+  implementation 'com.github.tonivade:purefun-instances:2.1-SNAPSHOT'
   implementation 'io.r2dbc:r2dbc-spi:0.8.2.RELEASE'
   implementation 'io.r2dbc:r2dbc-pool:0.8.3.RELEASE'
   testRuntime 'com.h2database:h2:1.4.200'
