--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ dependencies {
   annotationProcessor 'com.github.tonivade:purefun-processor:2.2-SNAPSHOT'
   api 'com.github.tonivade:purefun-free:2.2-SNAPSHOT'
   implementation 'com.github.tonivade:purefun-effect:2.2-SNAPSHOT'
-  implementation 'com.github.tonivade:purefun-instances:2.2-SNAPSHOT'
+  runtime 'com.github.tonivade:purefun-instances:2.2-SNAPSHOT'
   implementation 'io.r2dbc:r2dbc-spi:0.8.3.RELEASE'
   implementation 'io.r2dbc:r2dbc-pool:0.8.5.RELEASE'
   testRuntime 'com.h2database:h2:1.4.200'
