--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'com.diffplug.eclipse.apt'
 
 group = 'com.github.tonivade'
 archivesBaseName = 'puredbc'
-version = '0.2'
+version = '0.3-SNAPSHOT'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
