--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ dependencies {
   testRuntime 'com.h2database:h2:1.4.200'
   testRuntime 'io.r2dbc:r2dbc-h2:0.8.4.RELEASE'
   testImplementation 'com.zaxxer:HikariCP:3.4.5'
-  testImplementation 'com.github.tonivade:purecheck:0.1'
+  testImplementation 'com.github.tonivade:purecheck:0.2-SNAPSHOT'
   testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
   testImplementation 'org.junit.platform:junit-platform-runner:1.7.0'
 }
