--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-apply plugin: 'java'
 apply plugin: 'java-library'
 apply plugin: 'jacoco'
 apply plugin: 'com.bmuschko.nexus'
@@ -43,11 +42,11 @@ dependencies {
   annotationProcessor 'com.github.tonivade:purefun-processor:2.3-SNAPSHOT'
   api 'com.github.tonivade:purefun-free:2.3-SNAPSHOT'
   implementation 'com.github.tonivade:purefun-effect:2.3-SNAPSHOT'
-  runtime 'com.github.tonivade:purefun-instances:2.3-SNAPSHOT'
+  runtimeOnly 'com.github.tonivade:purefun-instances:2.3-SNAPSHOT'
   implementation 'io.r2dbc:r2dbc-spi:0.8.4.RELEASE'
   implementation 'io.r2dbc:r2dbc-pool:0.8.6.RELEASE'
-  testRuntime 'com.h2database:h2:1.4.200'
-  testRuntime 'io.r2dbc:r2dbc-h2:0.8.4.RELEASE'
+  testRuntimeOnly 'com.h2database:h2:1.4.200'
+  testRuntimeOnly 'io.r2dbc:r2dbc-h2:0.8.4.RELEASE'
   testImplementation 'com.zaxxer:HikariCP:4.0.3'
   testImplementation 'com.github.tonivade:purecheck:0.2-SNAPSHOT'
   testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
