--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,29 @@
-apply plugin: 'java-library'
-apply plugin: 'jacoco'
-apply plugin: 'com.bmuschko.nexus'
+plugins {
+  id 'java-library'
+  id 'jacoco'
+  id 'maven-publish'
+  id 'signing'
+  id "com.diffplug.oomph.ide" version "3.31.0"
+  id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
+}
+
 apply plugin: 'com.diffplug.eclipse.apt'
 
 group = 'com.github.tonivade'
-archivesBaseName = 'puredbc'
 version = '0.3-SNAPSHOT'
 
 sourceCompatibility = 11
 targetCompatibility = 11
 
-buildscript {
-  repositories {
-    mavenCentral()
-    jcenter()
-  }
+ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
 
-  dependencies {
-    classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
-    classpath 'com.diffplug.gradle:goomph:3.31.0'
-  }
+java {
+  withJavadocJar()
+  withSourcesJar()
 }
 
 jacoco {
-  toolVersion = '0.8.5'
+  toolVersion = '0.8.6'
 }
 
 repositories {
@@ -53,45 +53,68 @@ dependencies {
   testImplementation 'org.junit.platform:junit-platform-runner:1.7.2'
 }
 
-modifyPom {
-  project {
-    name 'PureDBC'
-    description 'Pure Functional Database Connection Layer'
-    url 'https://github.com/tonivade/puredbc'
-    inceptionYear '2020'
+publishing {
+  publications {
+    mavenJava(MavenPublication) {
+      
+      from components.java
 
-    scm {
-      url 'https://github.com/tonivade/puredbc'
-      connection 'scm:https://github.com/tonivade/puredbc.git'
-      developerConnection 'scm:git://github.com/tonivade/puredbc.git'
-    }
+      pom {
+        name = 'PureDBC'
+        description = 'Pure Functional Database Connection Layer'
+        url = 'https://github.com/tonivade/puredbc'
+        inceptionYear = '2020'
 
-    licenses {
-      license {
-        name 'The MIT License (MIT)'
-        url 'https://github.com/tonivade/puredbc/blob/master/LICENSE'
-        distribution 'repo'
-      }
-    }
+        scm {
+          url = 'https://github.com/tonivade/puredbc'
+          connection = 'scm:https://github.com/tonivade/puredbc.git'
+          developerConnection = 'scm:git://github.com/tonivade/puredbc.git'
+        }
 
-    developers {
-      developer {
-        id 'tonivade'
-        name 'Antonio Muñoz'
-        email 'antoniogmc@gmail.com'
+        licenses {
+          license {
+            name = 'The MIT License (MIT)'
+            url = 'https://github.com/tonivade/puredbc/blob/master/LICENSE'
+            distribution = 'repo'
+          }
+        }
+
+        developers {
+          developer {
+            id = 'tonivade'
+            name = 'Antonio Muñoz'
+            email = 'antoniogmc@gmail.com'
+          }
+        }
       }
     }
   }
 }
 
-extraArchive {
-  sources = true
-  tests = false
-  javadoc = true
+signing {
+  sign publishing.publications.mavenJava
 }
 
-nexus {
-  sign = true
-  repositoryUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2'
-  snapshotRepositoryUrl = 'https://oss.sonatype.org/content/repositories/snapshots'
+tasks.withType(Sign) {
+  onlyIf { isReleaseVersion }
+}
+
+nexusPublishing {
+  repositories {
+    sonatype {
+      
+      stagingProfileId = '19a96b937cdb5'
+      
+      username = project.findProperty('nexusUsername')  
+      password = project.findProperty('nexusPassword')
+    }
+  }
+  
+  clientTimeout = Duration.ofSeconds(300)
+  connectTimeout = Duration.ofSeconds(60)
+
+  transitionCheckOptions {
+    maxRetries.set(40)
+    delayBetween.set(java.time.Duration.ofMillis(3000))
+  }
 }
