--- a/build.gradle
+++ b/build.gradle
@@ -102,14 +102,14 @@ tasks.withType(Sign) {
 nexusPublishing {
   repositories {
     sonatype {
-      
+
       stagingProfileId = '19a96b937cdb5'
-      
-      username = project.findProperty('nexusUsername')  
+
+      username = project.findProperty('nexusUsername')
       password = project.findProperty('nexusPassword')
     }
   }
-  
+
   clientTimeout = Duration.ofSeconds(300)
   connectTimeout = Duration.ofSeconds(60)
 
@@ -118,3 +118,13 @@ nexusPublishing {
     delayBetween.set(java.time.Duration.ofMillis(3000))
   }
 }
+
+task touchTestHack() {
+  ant.touch() {
+    ant.fileset(dir: 'build') {
+      include(name: 'test-results/test/*.xml')
+    }
+  }
+}
+
+test.finalizedBy(touchTestHack)
