--- a/build.gradle
+++ b/build.gradle
@@ -39,10 +39,10 @@ test {
 }
 
 dependencies {
-  annotationProcessor 'com.github.tonivade:purefun-processor:3.0-SNAPSHOT'
-  api 'com.github.tonivade:purefun-free:3.0-SNAPSHOT'
-  implementation 'com.github.tonivade:purefun-effect:3.0-SNAPSHOT'
-  runtimeOnly 'com.github.tonivade:purefun-instances:3.0-SNAPSHOT'
+  annotationProcessor 'com.github.tonivade:purefun-processor:3.0'
+  api 'com.github.tonivade:purefun-free:3.0'
+  implementation 'com.github.tonivade:purefun-effect:3.0'
+  runtimeOnly 'com.github.tonivade:purefun-instances:3.0'
   implementation 'io.r2dbc:r2dbc-spi:0.8.5.RELEASE'
   implementation 'io.r2dbc:r2dbc-pool:0.8.7.RELEASE'
   testRuntimeOnly 'com.h2database:h2:1.4.200'
