--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,10 @@ apply plugin: 'com.diffplug.eclipse.apt'
 group = 'com.github.tonivade'
 version = '0.4-SNAPSHOT'
 
-sourceCompatibility = 11
-targetCompatibility = 11
-
 ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
 
 jacoco {
-  toolVersion = '0.8.6'
+  toolVersion = '0.8.7'
 }
 
 repositories {
@@ -30,19 +27,37 @@ repositories {
 }
 
 java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(17)
+  }
+  
   withJavadocJar()
   withSourcesJar()
 }
 
+compileJava {
+  options.compilerArgs << '-Xlint:unchecked'
+  options.compilerArgs << '-Xlint:rawtypes'
+  options.release = 17
+}
+
+compileTestJava {
+  options.compilerArgs << '-Xlint:unchecked'
+  options.compilerArgs << '-Xlint:rawtypes'
+  options.release = 17
+}
+
 test {
   useJUnitPlatform()
+
+  reports.html.required = false
 }
 
 dependencies {
-  annotationProcessor 'com.github.tonivade:purefun-processor:3.0'
-  api 'com.github.tonivade:purefun-free:3.0'
-  implementation 'com.github.tonivade:purefun-effect:3.0'
-  runtimeOnly 'com.github.tonivade:purefun-instances:3.0'
+  annotationProcessor 'com.github.tonivade:purefun-processor:3.1-SNAPSHOT'
+  api 'com.github.tonivade:purefun-free:3.1-SNAPSHOT'
+  implementation 'com.github.tonivade:purefun-effect:3.1-SNAPSHOT'
+  runtimeOnly 'com.github.tonivade:purefun-instances:3.1-SNAPSHOT'
   implementation 'io.r2dbc:r2dbc-spi:0.9.1.RELEASE'
   implementation 'io.r2dbc:r2dbc-pool:0.9.0.RELEASE'
   testRuntimeOnly 'com.h2database:h2:2.1.210'
