--- a/src/main/resources/META-INF/native-image/com.github.tonivade/puredbc/native-image.properties
+++ b/src/main/resources/META-INF/native-image/com.github.tonivade/puredbc/native-image.properties
@@ -1,2 +1,1 @@
-
-Args = --initialize-at-run-time=org.h2.store.fs.FileNioMemData
+Args = --initialize-at-run-time=org.h2.store.fs.niomem.FileNioMemData
