--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ dependencies {
   testRuntimeOnly 'com.h2database:h2:2.1.210'
   testRuntimeOnly 'io.r2dbc:r2dbc-h2:0.9.1.RELEASE'
   testImplementation 'com.zaxxer:HikariCP:5.0.1'
-  testImplementation 'com.github.tonivade:purecheck:0.2'
+  testImplementation 'com.github.tonivade:purecheck:0.3-SNAPSHOT'
   testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
   testImplementation 'org.junit.platform:junit-platform-runner:1.8.2'
 }
