--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
   id 'jacoco'
   id 'maven-publish'
   id 'signing'
-  id "com.diffplug.oomph.ide" version "3.36.2"
+  id "com.diffplug.eclipse.apt" version "3.36.2"
   id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
 }
 
