--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
   id 'signing'
   id "com.diffplug.eclipse.apt" version "3.40.0"
   id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
+  id 'com.github.ben-manes.versions' version "0.43.0"
 }
 
 apply plugin: 'com.diffplug.eclipse.apt'
