--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
   id 'jacoco'
   id 'maven-publish'
   id 'signing'
-  id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
-  id 'com.github.ben-manes.versions' version "0.49.0"
+  alias(libs.plugins.nexus)
+  alias(libs.plugins.versions)
 }
 
 group = 'com.github.tonivade'
@@ -13,7 +13,7 @@ version = '0.6-SNAPSHOT'
 ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
 
 jacoco {
-  toolVersion = '0.8.9'
+  toolVersion = '0.8.11'
 }
 
 repositories {
@@ -52,18 +52,18 @@ test {
 }
 
 dependencies {
-  annotationProcessor 'com.github.tonivade:purefun-processor:4.2-SNAPSHOT'
-  api 'com.github.tonivade:purefun-free:4.2-SNAPSHOT'
-  implementation 'com.github.tonivade:purefun-effect:4.2-SNAPSHOT'
-  runtimeOnly 'com.github.tonivade:purefun-instances:4.2-SNAPSHOT'
-  implementation 'io.r2dbc:r2dbc-spi:1.0.0.RELEASE'
-  implementation 'io.r2dbc:r2dbc-pool:1.0.1.RELEASE'
-  testRuntimeOnly 'com.h2database:h2:2.2.224'
-  testRuntimeOnly 'io.r2dbc:r2dbc-h2:1.0.0.RELEASE'
-  testImplementation 'com.zaxxer:HikariCP:5.1.0'
-  testImplementation 'com.github.tonivade:purecheck:0.5-SNAPSHOT'
-  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
-  testImplementation 'org.junit.platform:junit-platform-runner:1.10.1'
+  annotationProcessor libs.purefunProcessor
+  api libs.purefunFree
+  implementation libs.purefunEffect
+  runtimeOnly libs.purefunInstances
+  implementation libs.r2dbcSpi
+  implementation libs.r2dbcPool
+  testRuntimeOnly libs.h2
+  testRuntimeOnly libs.r2dbcH2
+  testImplementation libs.hikaricp
+  testImplementation libs.purecheck
+  testImplementation libs.junitJupiter
+  testImplementation libs.junitRunner
 }
 
 publishing {
