--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 group = 'com.github.tonivade'
-version = '0.6-SNAPSHOT'
+version = '0.6'
 
 ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
 
