--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
-purefunVersion = "4.2-SNAPSHOT"
+purefunVersion = "4.2"
 junitEngineVersion = "5.10.1"
 junitPlatformVersion = "1.10.1"
-purecheckVersion = "0.5-SNAPSHOT"
+purecheckVersion = "0.5"
 versionsVersion = "0.50.0"
 nexusVersion = "1.3.0"
 r2dbcSpiVersion = "1.0.0.RELEASE"
