--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ java {
 compileJava {
   options.compilerArgs << '-Xlint:unchecked'
   options.compilerArgs << '-Xlint:rawtypes'
+  options.compilerArgs << '-Xlint:module'
+  options.compilerArgs << '-Xlint:exports'
+  options.compilerArgs << '-Xlint:opens'
   options.release = 21
 }
 
@@ -62,6 +65,12 @@ test {
   useJUnitPlatform()
 
   reports.html.required = true
+}
+
+javadoc {
+  modularity.inferModulePath = false
+
+  exclude "module-info.java"
 }
 
 dependencies {
