--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ tasks.withType(JavaCompile) {
   } else {
     options.errorprone {
       option("NullAway:AnnotatedPackages", "com.github.tonivade.puredbc")
-      option("ExcludedPaths", ".*/src/test/java/.*")
+      excludedPaths = ".*/src/test/java/.*"
     }
   }
 }
