disable errorprone in tests

--- a/build.gradle
+++ b/build.gradle
@@ -53,10 +53,7 @@ tasks.withType(JavaCompile) {
       option("NullAway:SuggestSuppressions", "true")
     }
   } else {
-    options.errorprone {
-      option("NullAway:AnnotatedPackages", "com.github.tonivade.puredbc")
-      excludedPaths = ".*/src/test/java/.*"
-    }
+    options.errorprone.enabled = false
   }
 }
 
