--- a/build.gradle
+++ b/build.gradle
@@ -120,6 +120,9 @@ publishing {
 }
 
 signing {
+  def signingKey = findProperty("signingKey")
+  def signingPassword = findProperty("signingPassword")
+  useInMemoryPgpKeys(signingKey, signingPassword)
   sign publishing.publications.mavenJava
 }
 
