--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ repositories {
   mavenLocal() 
   mavenCentral()
   maven {
-    url = 'https://oss.sonatype.org/content/repositories/snapshots'
+    url = 'https://central.sonatype.com/repository/maven-snapshots/'
   }
 }
 
