Update purecheckVersion to 1.2-SNAPSHOT

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 purefunVersion = "5.2-SNAPSHOT"
 junitVersion = "6.0.2"
-purecheckVersion = "1.1"
+purecheckVersion = "1.2-SNAPSHOT"
 versionsVersion = "0.53.0"
 nexusVersion = "2.0.0"
 r2dbcSpiVersion = "1.0.0.RELEASE"
